--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "vendor": "vinnerenio",
   "name": "store-theme-base",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
@@ -15,10 +15,12 @@
   "billingOptions": {
     "type": "free",
     "support": {
-        "email": "support@com.br",
-        "url": "https://support.com/hc/requests"
-      },
-    "availableCountries" : ["*"]
+      "email": "support@com.br",
+      "url": "https://support.com/hc/requests"
+    },
+    "availableCountries": [
+      "*"
+    ]
   },
   "dependencies": {
     "vtex.store": "2.x",
